--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -8,8 +8,15 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_7
 }
 
+ext {
+    koin_version = "3.1.2"
+    coroutines_version = "1.3.9"
+}
+
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api "io.insert-koin:koin-core:$koin_version"
+//    api "io.insert-koin:koin-android:$koin_version"
 
-
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 }
