--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 ext {
+    lifecycle_version = "2.3.1"
     glide_version = "4.12.0"
 }
 
@@ -43,6 +44,9 @@ dependencies {
 
     implementation project(path: ':data')
     implementation project(path: ':domain')
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
